# jiphyeonjeon-agent

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/distribution/: awesome-pr-entries.md  exposure-status.md  mcp-registry.md  website-llms.txt
docs/strategy/: seo-geo-strategy.md
scripts/: e2e_live.py  setup.sh  smoke_stdio.py  update.sh
skills/: jh-build-curriculum.md  jh-daily-digest.md  jh-draft-blog.md  jh-explore.md  jh-review-paper.md  jh-setup.md  jh-update.md
src/jiphyeonjeon_mcp/: __init__.py  __main__.py  auth.py  capability.py  client.py  config.py  server.py  updater.py  validators.py
src/jiphyeonjeon_mcp/tools/: __init__.py  blog.py  bookmarks.py  curriculum.py  explore.py  figure.py  papers.py  review.py  search.py
tests/unit/: test_auth.py  test_capability.py  test_client.py  test_tools.py  test_tools_contract.py  test_updater.py  test_validators.py  test_version.py
